Bug 248243 - REGRESSION(256902@main): [WPE] Broke context-menu signal
Summary: REGRESSION(256902@main): [WPE] Broke context-menu signal
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: PC Linux
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-22 12:49 PST by Michael Catanzaro
Modified: 2022-11-24 07:57 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2022-11-22 12:49:00 PST
When reviewing 256902@main "[GTK][WPE] Move WebKitWebView::context-menu signal declaration to platform specific files" I missed that it broke the context-menu signal for WPE. The signal declaration now always has two parameters, but it is always emitted with three parameters. Oops. The expected behavior is two parameters for new API, three parameters for old API.
Comment 1 Michael Catanzaro 2022-11-22 14:30:29 PST
Pull request: https://github.com/WebKit/WebKit/pull/6745
Comment 2 EWS 2022-11-24 07:57:37 PST
Committed 256991@main (4b24459ebb4a): <https://commits.webkit.org/256991@main>

Reviewed commits have been landed. Closing PR #6745 and removing active labels.